# senseplus_hardware_backend_rust

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  setup.txt  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
src/: config.rs  main.rs  mod.rs
src/abstractions/: README.md  factory.rs  mod.rs  pipeline.rs  sensor.rs  service.rs  utility.rs
src/configs/sensors/: config.json
src/configurations/: sensors.rs
src/constants/: README.md  distance.rs  mod.rs  sensor.rs  unit.rs
src/dtos/: README.md  mod.rs
src/dtos/configurations/: sensors.rs
src/dtos/measurement/: base.rs  mod.rs
src/dtos/measurement/sensor/: bh1750.rs  bme280.rs  ds323x.rs  vl53l0x.rs
src/dtos/measurement/sensor/lsm303dlhc/: accel.rs  mag.rs  mod.rs
src/dtos/response/: base.rs  mod.rs
src/dtos/response/services/: mod.rs  sensing_client.rs
src/enums/: value.rs
src/factories/: README.md  sensor.rs
src/sensors/: README.md  bh1750.rs  bme280.rs  ds323x.rs  mod.rs  vl53l0x.rs
src/sensors/lsm303dlhc/: accel.rs  mag.rs
src/services/: README.md  http_client.rs  mod.rs  sensing_client.rs
