[package]
edition      = "2021"
name         = "senseplus_hardware_backend_rust"
rust-version = "1.86"
version      = "0.1.0"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-beta.0", features = ["esp32"] }
critical-section       = "1.2.0"
bme280                 = "0.5.1"
bh1750                 = "0.1.0"
reqwest                = "0.12.22"
urlencoding            = "2.1.3"
uuid                   = { version = "1", features = ["v4"] }
lsm303dlhc             = "0.2.0"
vl53l0x                = "1.0.1"
bme680                 = "0.6.0"
ds323x = "0.6.0"
heapless = "0.8"
serde-json-core = "0.5"
serde = { version = "1.0", features = ["derive"], default-features = false }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
